# flowforms

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
recipes/: hero_colliding_rings.toml
src/flowforms/: __init__.py  brand.py  camera.py  chrome.py  cine.py  cli.py  composite.py  diagnostics.py  figures.py  hero.py  io.py  recipes.py  scene.py  spectrum.py
tests/: _imgcompare.py  test_brand.py  test_brand_cinema.py  test_camera.py  test_chrome.py  test_cine_animation.py  test_cine_render.py  test_cli.py  test_cli_cine.py  test_composite_animation.py  test_compositor.py  test_diagnostics.py  test_figures_plots.py  test_figures_stills.py  test_hero.py  test_imgcompare.py  test_io.py  test_rolling_plot.py  test_scene.py  test_spectrum.py
tests/fixtures/: f_0000.vti  seq.pvd  surface.vtp
