[project]
name = "flowforms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "alejandrosotofranco", email = "soto.alejandro2025@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "cmocean>=4.0.3",
    "imageio>=2.37.3",
    "imageio-ffmpeg>=0.6.0",
    "numpy>=2.4.6",
    "pyarrow>=24.0.0",
    "pyvista>=0.48.4",
]

[project.scripts]
flowforms = "flowforms.cli:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
